--- a/How-does-it-work.html
+++ b/How-does-it-work.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="contact-page">
+<body class="how-work-page">
     <!--header section start-->
     <header class="fixed-top">
         <img class="w-100 menu-bg" src="images/menu-bg.svg" alt="bg" />
@@ -64,61 +64,81 @@
     </header>
     <!--header section end-->
 
-    <!--contact section start-->
-    <section class="contact-wrapper">
+    <!--information section start-->
+    <section class="info-wrapper how-does-it-work">
+        <img class="info-bg" src="images/how-it-work-bg.png" alt="how-it-work">
         <div class="container">
-            <div class="contact-form-wrapper">
-                <h1 class="section-ttl">Contattaci</h1>
-                <p class="section-desc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip
-                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+            <h1 class="info-ttl">Come funziona</h1>
+            <p class="info-desc">Aligenducit aperionsedis verum quatin rem. Fero eat eturit re repedi velibusant, sitistem liquam sim qui denimaio. Occabor epernatquo dolorestia vel ipsus ea que velibus conseque discien ssit ium sante aut optas rem earibus, que vo us conseque discien ssit ium sante aut optas rem 
+                ur, nihillam sum fuga. Tem simin porrum qui venia illacerati con cum ad que et as nos num que comnite voluptatet, cullaccusam dolorro con 
+                rempers pienim ra nem diaecab orporup tatur?</p>
+            <img class="divider-lg" src="images/divider-lg.png" alt="divider">
+            <div class="how-does-work-details">
+                <img class="location-img" src="images/location.png" alt="">
+                <h4 class="info-ttl">Informazione per l’host</h4>
+                <p class="info-desc">Aligenducit aperionsedis verum quatin rem. Fero eat eturit re repedi velibusant, sitistem liquam sim qui denimaio. Occabor epernatquo dolorestia vel 
+                    ipsus ea que velibus conseque discienda cuptiamendem hit, quam accum fugiae cor ad molupta cum es et atet que nimos ellic tem alic tem. Nam 
+                    fugitios dolupta nihil mi, qui quis dissit ium sante aut optas rem earibus, que voluptia vellupta sum untotatur, nihillam sum fuga. Tem simin porrum 
+                    qui venia illacerati con cum ad que et as nos num que comnite voluptatet, cullaccusam dolorro con rempers pienim ra nem diaecab orporup tatur?
                 </p>
-                <form class="contact-form">
-                    <div class="form-tile">
-                        <input type="text" class="form-control" id="name" placeholder="Nome Cognome">
-                    </div>
-                    <div class="form-tile">
-                        <input type="email" class="form-control" id="email" placeholder="Mail">
-                    </div>
-                    <div class="form-tile">
-                        <input type="tel" class="form-control" id="number" placeholder="tel">
-                    </div>
-                    <div class="form-tile">
-                        <label for="message" class="form-label">Messaggio</label>
-                        <textarea class="form-control" id="message" rows="8"></textarea>
-                    </div>
-                    <div class="action-btn text-center">
-                        <button type="submit" class="btn btn-outline-secondary">INVIA</button>
-                    </div>
-                </form>
+                <div class="col-sm-3 col-5 col-lg-2 space-btn">
+                    <a href="#" class="read-more">
+                        <img src="images/more.svg" alt="btn">
+                        <p>Approfondisci</p>
+                    </a>
+                </div>
+            </div>
+            <img class="divider-lg-small" src="images/divider-big.svg" alt="divider">
+            <div class="how-does-work-details">
+                <img class="location-img" src="images/contact.png" alt="">
+                <h4 class="info-ttl">Informazione per l’utente</h4>
+                <p class="info-desc">Aligenducit aperionsedis verum quatin rem. Fero eat eturit re repedi velibusant, sitistem liquam sim qui denimaio. Occabor epernatquo dolorestia vel 
+                    ipsus ea que velibus conseque discienda cuptiamendem hit, quam accum fugiae cor ad molupta cum es et atet que nimos ellic tem alic tem. Nam 
+                    fugitios dolupta nihil mi, qui quis dissit ium sante aut optas rem earibus, que voluptia vellupta sum untotatur, nihillam sum fuga. Tem simin porrum 
+                    qui venia illacerati con cum ad que et as nos num que comnite voluptatet, cullaccusam dolorro con rempers pienim ra nem diaecab orporup tatur?
+                </p>
+                <div class="col-sm-3 col-5 col-lg-2 space-btn">
+                    <a href="#" class="read-more">
+                        <img src="images/more.svg" alt="btn">
+                        <p>Approfondisci</p>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
-    <!--contact section end-->
+    <!--information section end-->
+
+    <!--newsletter section start-->
+    <section class="contactus-wrapper">
+        <div class="container">
+            <h2>CONSULTA LE NOSTRE <span>FAQ</span></h2>
+            <h5>OPPURE</h5>
+            <div class="col-sm-3 col-5 col-lg-2 space-btn">
+                <a class="read-more" href="#"><img src="images/more.svg" alt="btn">
+                    <p>Contattaci</p>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!--newsletter section end-->
 
     <!--footer section start-->
     <footer>
         <div class="container-fluid gx-5">
             <div class="row justify-content-center">
-                <div class="col-lg-2 col-sm-2 logo-section">
+                <div class="col-md-2 col-sm-6 logo-section">
                     <img class="logo" src="images/logo.svg" alt="logo" />
                     <p>MAPPARTE 2020</p>
                     <p>Tutti i diritti riservati</p>
                     <img class="divider" src="images/footer-divider-1.svg" alt="divider" />
                 </div>
-                <div class="col-lg-2 col-sm-2 contact-section">
+                <div class="col-md-2 col-sm-6 contact-section">
                     <h6 class="sec-ttl">CONTATTI</h6>
                     <a href="tel:04335675343">+39 0433 567 5343</a>
                     <a href="mailto:mail@mapparte.com">mail@mapparte.com</a>
                     <img class="divider" src="images/footer-divider-2.svg" alt="divider" />
                 </div>
-                <div class="col-lg-2 col-sm-2 menu-section">
+                <div class="col-md-2 col-sm-6 menu-section">
                     <h6 class="sec-ttl">SCOPRI</h6>
                     <a href="#">Home</a>
                     <a href="#">Magazine</a>
@@ -129,14 +149,14 @@
                     <a href="#">Faq</a>
                     <img class="divider" src="images/footer-divider-3.svg" alt="divider" />
                 </div>
-                <div class="col-lg-2 col-sm-2 info-section">
+                <div class="col-md-2 col-sm-6 info-section">
                     <h6 class="sec-ttl">INFORMAZIONI</h6>
                     <a href="#">Cookies policy</a>
                     <a href="#">Privacy policy</a>
                     <a href="#">Termini e Condizioni d’uso</a>
                     <img class="divider" src="images/footer-divider-4.svg" alt="divider" />
                 </div>
-                <div class="col-lg-2 col-sm-2 social-section">
+                <div class="col-md-2 col-sm-6 social-section">
                     <h6 class="sec-ttl">Scarica l’App</h6>
                     <ul>
                         <li><a href="#"><img src="images/facebook.svg" alt="facebook" /></a></li>
