Solve detail-logged page issue

--- a/detail-not-logged.html
+++ b/detail-not-logged.html
@@ -163,7 +163,12 @@
                         <h3 class="space-title">Lo spazio</h3>
                         <div class="row">
                             <div class="col-md-3 col-sm-4 col-6 space-tile">
-                                <img class="space-img" src="images/stanze.png" alt="photo">
+                                <div class="specs">
+                                    <img class="space-img" src="images/stanze.png" alt="photo">
+                                    <span>8m</span>
+                                    <span>16m</span>
+                                    <span>16m</span>
+                                </div>
                                 <img class="divider" src="images/divider.svg" alt="divider">
                                 <h5 class="space-ttl">288 M<sup>2</sup><br />4 STANZE</h5>
                             </div>
