--- a/faqs.html
+++ b/faqs.html
@@ -69,8 +69,8 @@
         <img class="info-bg" src="images/how-it-work-bg.png" alt="how-it-work">
         <div class="container">
             <h1 class="info-ttl">FAQ</h1>
-            <p class="info-desc">Aligenducit aperionsedis verum quatin rem. Fero eat eturit re repedi velibusant, sitistem liquam sim qui denimaio. Occabor epernatquo dolorestia vel ipsus ea que velibus conseque discien ssit ium sante aut optas rem earibus, que vo us conseque discien ssit ium sante aut optas rem 
-                ur, nihillam sum fuga. Tem simin porrum qui venia illacerati con cum ad que et as nos num que comnite voluptatet, cullaccusam dolorro con 
+            <p class="info-desc">Aligenducit aperionsedis verum quatin rem. Fero eat eturit re repedi velibusant, sitistem liquam sim qui denimaio. Occabor epernatquo dolorestia vel ipsus ea que velibus conseque discien ssit ium sante aut optas rem earibus, que vo us conseque discien ssit ium sante aut optas rem
+                ur, nihillam sum fuga. Tem simin porrum qui venia illacerati con cum ad que et as nos num que comnite voluptatet, cullaccusam dolorro con
                 rempers pienim ra nem diaecab orporup tatur?</p>
             <img class="divider-lg" src="images/divider-lg.png" alt="divider">
             <div class="faq-details">
@@ -79,15 +79,13 @@
                         <img class="mx-auto" src="images/location.png" alt="user">
                     </div>
                     <h1 class="info-ttl">Informazione per l’host</h1>
-                    <img class="mx-auto coupon-img" src="images/coupon.png" alt="">
+
                     <img class="divider" src="images/divider.svg" alt="divider">
                     <div class="accordion how-work-accordian" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    <h5>Come utilizzare i coupon</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <h5 class="accordion-ttl">Come utilizzare i coupon <i class="fa fa-angle-down" aria-hidden="true"></i></h5>
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
@@ -106,8 +104,7 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <h5>Descrizione del processo di prenotazione</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                    <h5 class="accordion-ttl">Descrizione del processo di prenotazione <i class="fa fa-angle-down" aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -122,14 +119,14 @@
                                 </div>
                             </div>
                         </div>
-                        <img class="mx-auto information-img" src="images/information.png" alt="">
+
                         <img class="divider" src="images/divider.svg" alt="divider">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <h5>Perche alcune informazioni sono nascoste?</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+
+                                    <h5 class="accordion-ttl">Perche alcune informazioni sono nascoste? <i class="fa fa-angle-down" aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -148,8 +145,7 @@
                             <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                    <h5>Altre informazioni per il cliente</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                    <h5 class="accordion-ttl">Altre informazioni per il cliente <i class="fa fa-angle-down" aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
@@ -172,15 +168,15 @@
                         <img class="mx-auto" src="images/contact.png" alt="user">
                     </div>
                     <h1 class="info-ttl">Informazione per l’utente</h1>
-                    <img class="mx-auto coupon-img" src="images/coupon.png" alt="">
+
                     <img class="divider" src="images/divider.svg" alt="divider">
                     <div class="accordion how-work-accordian" id="accordionExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingFive">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
-                                    <h5>Come utilizzare i coupon</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                    <h5 class="accordion-ttl">Come utilizzare i coupon <i class="fa fa-angle-down"
+                                            aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive"
@@ -199,8 +195,8 @@
                             <h2 class="accordion-header" id="headingSix">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                    <h5>Descrizione del processo di prenotazione</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                    <h5 class="accordion-ttl">Descrizione del processo di prenotazionei <i class="fa fa-angle-down"
+                                            aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
@@ -215,14 +211,14 @@
                                 </div>
                             </div>
                         </div>
-                        <img class="mx-auto information-img" src="images/information.png" alt="">
+
                         <img class="divider" src="images/divider.svg" alt="divider">
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingSeven">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                                    <h5>Perche alcune informazioni sono nascoste?</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                    <h5 class="accordion-ttl">Perche alcune informazioni sono nascoste? <i class="fa fa-angle-down"
+                                            aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
@@ -241,8 +237,8 @@
                             <h2 class="accordion-header" id="headingEight">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                                    <h5>Altre informazioni per il cliente</h5>
-                                    <img class="down-arrow" src="images/down-arrow.png" alt="down-arrow">
+                                    <h5 class="accordion-ttl">Altre informazioni per il cliente <i class="fa fa-angle-down"
+                                            aria-hidden="true"></i> </h5>
                                 </button>
                             </h2>
                             <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight"
