[booking-page.html] table-wrapper for mobile fix

--- a/booking-page.html
+++ b/booking-page.html
@@ -110,76 +110,78 @@
                                 </select>
                             </div>
                         </div>
-                        <table class="booking-table table">
-                            <thead class="booking-table-head">
-                                <tr class="row mx-0 justify-content-center">
-                                    <th class="col-2">spazio</th>
-                                    <th class="col-2">ID prenotazione</th>
-                                    <th class="col-1">Cliente</th>
-                                    <th class="col-2">Checkin</th>
-                                    <th class="col-2">Checkout</th>
-                                    <th class="col-1">Prezzo</th>
-                                    <th class="col-2">Stato</th>
-                                </tr>
-                            </thead>
-                            <tbody class="booking-table-body">
-                                <tr class="row mx-0 justify-content-center new-request">
-                                    <td class="col-2"> <a href="new-booking-page.html">Galleria di Sophie</a></td>
-                                    <td class="col-2">Z065GH8</td>
-                                    <td class="col-1">Antonio</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 18:00</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 23:00</td>
-                                    <td class="col-1">800,00 euro</td>
-                                    <td class="col-2">
-                                        <p class="status">Nuova richiesta</p> <br> 6 november 2020
-                                    </td>
-                                </tr>
-                                <tr class="row mx-0 justify-content-center accepted">
-                                    <td class="col-2"><a href="accepted-booking-page.html">Galleria di Sophie</a></td>
-                                    <td class="col-2">Z065GH8</td>
-                                    <td class="col-1">Antonio</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 18:00</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 23:00</td>
-                                    <td class="col-1">800,00 euro</td>
-                                    <td class="col-2">
-                                        <p class="status">Accettata</p> <br> 6 november 2020
-                                    </td>
-                                </tr>
-                                <tr class="row mx-0 justify-content-center rejected">
-                                    <td class="col-2"><a href="rejected-booking-page.html">Galleria di Sophie</a></td>
-                                    <td class="col-2">Z065GH8</td>
-                                    <td class="col-1">Antonio</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 18:00</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 23:00</td>
-                                    <td class="col-1">800,00 euro</td>
-                                    <td class="col-2">
-                                        <p class="status">rifiutata</p> <br> 6 november 2020
-                                    </td>
-                                </tr>
-                                <tr class="row mx-0 justify-content-center paid">
-                                    <td class="col-2"><a href="paid-booking-page.html">Galleria di Sophie</a></td>
-                                    <td class="col-2">Z065GH8</td>
-                                    <td class="col-1">Antonio</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 18:00</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 23:00</td>
-                                    <td class="col-1">800,00 euro</td>
-                                    <td class="col-2">
-                                        <p class="status">Pagata</p> <br> 6 november 2020
-                                    </td>
-                                </tr>
-                                <tr class="row mx-0 justify-content-center feedback">
-                                    <td class="col-2"><a href="feedback-booking-page.html">Galleria di Sophie</a></td>
-                                    <td class="col-2">Z065GH8</td>
-                                    <td class="col-1">Antonio</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 18:00</td>
-                                    <td class="col-2">12 november 2020 <br> Ore 23:00</td>
-                                    <td class="col-1">800,00 euro</td>
-                                    <td class="col-2">
-                                        <p class="status">Dai un feedback</p> <br> 6 november 2020
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="table-wrapper">
+                          <table class="booking-table table">
+                              <thead class="booking-table-head">
+                                  <tr class="row mx-0 justify-content-center">
+                                      <th class="col-2">spazio</th>
+                                      <th class="col-2">ID prenotazione</th>
+                                      <th class="col-1">Cliente</th>
+                                      <th class="col-2">Checkin</th>
+                                      <th class="col-2">Checkout</th>
+                                      <th class="col-1">Prezzo</th>
+                                      <th class="col-2">Stato</th>
+                                  </tr>
+                              </thead>
+                              <tbody class="booking-table-body">
+                                  <tr class="row mx-0 justify-content-center new-request">
+                                      <td class="col-2"> <a href="new-booking-page.html">Galleria di Sophie</a></td>
+                                      <td class="col-2">Z065GH8</td>
+                                      <td class="col-1">Antonio</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 18:00</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 23:00</td>
+                                      <td class="col-1">800,00 euro</td>
+                                      <td class="col-2">
+                                          <p class="status">Nuova richiesta</p> <br> 6 november 2020
+                                      </td>
+                                  </tr>
+                                  <tr class="row mx-0 justify-content-center accepted">
+                                      <td class="col-2"><a href="accepted-booking-page.html">Galleria di Sophie</a></td>
+                                      <td class="col-2">Z065GH8</td>
+                                      <td class="col-1">Antonio</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 18:00</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 23:00</td>
+                                      <td class="col-1">800,00 euro</td>
+                                      <td class="col-2">
+                                          <p class="status">Accettata</p> <br> 6 november 2020
+                                      </td>
+                                  </tr>
+                                  <tr class="row mx-0 justify-content-center rejected">
+                                      <td class="col-2"><a href="rejected-booking-page.html">Galleria di Sophie</a></td>
+                                      <td class="col-2">Z065GH8</td>
+                                      <td class="col-1">Antonio</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 18:00</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 23:00</td>
+                                      <td class="col-1">800,00 euro</td>
+                                      <td class="col-2">
+                                          <p class="status">rifiutata</p> <br> 6 november 2020
+                                      </td>
+                                  </tr>
+                                  <tr class="row mx-0 justify-content-center paid">
+                                      <td class="col-2"><a href="paid-booking-page.html">Galleria di Sophie</a></td>
+                                      <td class="col-2">Z065GH8</td>
+                                      <td class="col-1">Antonio</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 18:00</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 23:00</td>
+                                      <td class="col-1">800,00 euro</td>
+                                      <td class="col-2">
+                                          <p class="status">Pagata</p> <br> 6 november 2020
+                                      </td>
+                                  </tr>
+                                  <tr class="row mx-0 justify-content-center feedback">
+                                      <td class="col-2"><a href="feedback-booking-page.html">Galleria di Sophie</a></td>
+                                      <td class="col-2">Z065GH8</td>
+                                      <td class="col-1">Antonio</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 18:00</td>
+                                      <td class="col-2">12 november 2020 <br> Ore 23:00</td>
+                                      <td class="col-1">800,00 euro</td>
+                                      <td class="col-2">
+                                          <p class="status">Dai un feedback</p> <br> 6 november 2020
+                                      </td>
+                                  </tr>
+                              </tbody>
+                          </table>
+                        </div>
                     </div>
                     <div class="booking-table-section">
                         <div class="row booking-header justify-content-between">
@@ -196,7 +198,10 @@
                                 </select>
                             </div>
                         </div>
-                        <table class="booking-table table">
+
+
+                        <div class="table-wrapper">
+                          <table class="booking-table table">
                             <thead class="booking-table-head">
                                 <tr class="row mx-0 justify-content-center">
                                     <th class="col-2">spazio</th>
@@ -266,7 +271,8 @@
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
