Change css file to scss

--- a/subscription-details.html
+++ b/subscription-details.html
@@ -101,29 +101,34 @@
                         <div class="col-xl-10 col-md-12">
                             <div class="col-md-10">
                                 <h6 class="booking-subttl">Acquisto sponsorizzazione per Sport Palace</h6>
-                                <p class="status-note ps-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <p class="status-note ps-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                    veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             </div>
                             <div class="col-md-12">
                                 <div class="row mx-0 align-items-center">
                                     <div class="col-md-10">
                                         <ul class="status-wrapper accepted-status-wrapper row align-items-center">
-                                            <li class="col-sm-2 active">
+                                            <li class="col-sm-2 col-5 active">
                                                 <p>Profilo</p>
                                                 <h6>BRONZE</h6>
                                             </li>
-                                            <li class="col-sm-4 col-6">
+                                            <li class="col-sm-4 col-7">
                                                 Un nese (30 giorni) in cima ai risultati in homepage
                                             </li>
-                                            <li class="col-sm-4 col-6 d-flex">
+                                            <li class="col-sm-4 col-7 d-flex">
                                                 <i class="fas fa-clock"></i>
                                                 <ul class="row">
                                                     <li class="col-5">inizio</li>
                                                     <li class="col-7">25/04/2021</li>
                                                     <li class="col-5">scadenza</li>
                                                     <li class="col-7">25/05/2021</li>
-                                                </ul>                                                
+                                                </ul>
                                             </li>
-                                            <li class="col-sm-2 active">
+                                            <li class="col-sm-2 col-5 active">
                                                 <p>Totale</p>
                                                 <h6>15,00 €</h6>
                                             </li>
@@ -142,14 +147,14 @@
                                         <div class="mb-4 w-75">
                                             <label for="name" class="form-label">Numero della carta</label>
                                             <input type="text" class="form-control" id="name"
-                                                   placeholder="xxxx xxxx xxxx xxxx">
+                                                placeholder="xxxx xxxx xxxx xxxx">
                                         </div>
                                         <div class="mb-4 w-75">
                                             <div class="row">
                                                 <div class="col-sm-3 col-lg-2 col-4">
                                                     <label for="name" class="form-label">Scadenza</label>
                                                     <input type="text" class="form-control" id="name"
-                                                           placeholder="mm/aa">
+                                                        placeholder="mm/aa">
                                                 </div>
                                                 <div class="col-sm-3 col-lg-2 col-4">
                                                     <label for="name" class="form-label">CVV</label>
